src/components/blocks/event-teaser/_event-teaser.scss
@use "../../mixins";
@use "../../base";
@use "sass:color";

.b-event-teaser {
  color: base.sitecolors-siteColor("vam-black");
  margin-bottom: 32px;
  overflow: hidden;
  padding: 0 10px;
  position: relative;
  width: 100%;

  @include mixins.breakpoints-bpMinXSmall {
    width: 50%;
  }

  @include mixins.breakpoints-bpMinMedium {
    width: 33.333%;
  }

  &--dark {
    color: base.sitecolors-siteColor("vam-white");
  }

  &__link {
    display: block;
    margin-bottom: 10px;
    position: relative;

    &:hover h2,
    &:focus-visible h2 {
      text-decoration: underline;
    }
  }

  &__media {
    margin-bottom: 6px;
    overflow: hidden;
    padding-top: 66.67%;
    position: relative;

    @include mixins.breakpoints-bpMinXSmall {
      margin-bottom: 10px;
    }

    &::after {
      background-image:
        linear-gradient(
          rgba(base.sitecolors-siteColor("vam-black"), 0.35),
          rgba(base.sitecolors-siteColor("vam-black"), 0)
        );
      content: "";
      display: block;
      height: 100%;
      left: 0;
      opacity: 0;
      position: absolute;
      top: 0;
      transition: opacity 0.35s ease;
      width: 100%;
      z-index: 0;

      .b-event-teaser__link:hover &,
      .b-event-teaser__link:focus-visible & {
        opacity: 1;
      }
    }
  }

  &__media-image {
    height: 100%;
    left: 0;
    object-fit: cover;
    position: absolute;
    top: 0;
    width: 100%;
  }

  &__sponsor {
    @include base.typography-typeSetting(0, "regular");

    background-color: rgba(base.sitecolors-siteColor("vam-black"), 0.4);
    color: base.sitecolors-siteColor("vam-white");
    height: 32px;
    margin: -32px 0 0;
    overflow: hidden;
    padding: 8px 12px;
    position: relative;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  &__description {
    padding-bottom: 20px;
    position: relative;

    @include mixins.breakpoints-bpMinXSmall {
      min-height: 200px;
    }
  }

  &__type {
    @include base.typography-typeSetting(1, "regular");

    margin-bottom: 5px;
  }

  &__title {
    @include base.typography-typeSetting(5, "bold");

    margin: 1px 0 15px;

    @include mixins.breakpoints-bpMinSmall {
      @include base.typography-typeSetting(5, "bold");
    }
  }

  &__footer {
    align-items: center;
    border-bottom: 1px solid base.sitecolors-siteColor("vam-grey-7");
    display: flex;
    justify-content: space-between;

    .b-event-teaser--dark & {
      border-color: base.sitecolors-siteColor("vam-grey-2");
    }

    &__buttons > .u-btn {
      @include base.typography-typeSetting(3);

      margin: 0 0 10px 10px;

      .b-event-teaser--dark & {
        border-color: base.sitecolors-siteColor("vam-grey-2");
      }

      .b-event-teaser__link:hover &,
      .b-event-teaser__link:focus-visible & {
        background-color: color.scale(#fff, $lightness: -10%);
        border-color: base.sitecolors-siteColor("vam-grey-4");
      }

      .b-event-teaser--dark .b-event-teaser__link:hover &,
      .b-event-teaser--dark .b-event-teaser__link:focus-visible & {
        background-color: color.scale(base.sitecolors-siteColor("vam-black"), $lightness: 20%);
        border-color: #fff;
      }
    }
  }
}

